Updated Resources, removed deprecations